@@ -41,6 +41,7 @@ $(API): $(srcdir)/$(METADATA) $(srcdir)/$(RAW_API)
 	$(RUNTIME) ../parser/gapi-fixup.exe --api=$(API) --metadata=$(srcdir)/$(METADATA)
 
 generated-stamp: $(API) ../generator/gapi_codegen.exe $(build_customs)
+	rm generated/* &&	\
 	$(RUNTIME) ../generator/gapi_codegen.exe --generate $(API)		  \
 	--outdir=generated --customdir=$(srcdir) --assembly-name=$(ASSEMBLY_NAME) \
 	&& touch generated-stamp
